# rewars

./: Cargo.toml
client/: Cargo.toml
client/src/: core.rs
server/: Cargo.toml
server/src/: clientdata.rs  core.rs
shared/: Cargo.toml
shared/src/: gamemessage.rs  lib.rs
src/game/client/: mod.rs
src/game/server/: mod.rs
src/game/shared/: gamemessage.rs  mod.rs
