[package]
name = "rewars"
version = "0.1.0"
edition = "2021"

[dependencies]
# shared
redengine = { path = "../redengine" }
alkahest = { git = "https://github.com/zakarumych/alkahest", branch = "new", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.3"

# client-only
# server-only


[features]
client-binary = []
server-binary = []

[[bin]]
name = "client"
path = "src/game/client/bin/main.rs"
required-features = ["client-binary"]

[[bin]]
name = "server"
path = "src/game/server/bin/main.rs"
required-features = ["server-binary"]
